blog/CO.程序员/BE.后端/CommanderJS/example/bin/option/unknown.js
const { program } = require('commander')

program
  .option('-p --port <port>')
  .action((options) => {
    console.log('options is', options)
  })
  .allowUnknownOption()

program.parse()

// 未开启
// $ node ./bin/option/unknown -a
// error: unknown option '-a'

// 开启
// $ node ./bin/option/unknown -a    
// options is {}